function(add_simple_example NAME)
    string(TOLOWER ${NAME} filename)
    add_library(${filename}_example ${filename}/${filename}_view.cpp)
    target_include_directories(${filename}_example PUBLIC ${filename}/include/)
    target_link_libraries(${filename}_example PRIVATE gui)
    add_executable(${filename}_example_app main.cpp)
    target_compile_definitions(${filename}_example_app PRIVATE CLASSNAME=${NAME}View INCLUDE="examples/${filename}_view.hpp")
    target_link_libraries(${filename}_example_app PRIVATE gui ${filename}_example)

    pico_add_extra_outputs(${filename}_example_app)
    pico_enable_stdio_uart(${filename}_example_app 0)
    pico_enable_stdio_semihosting(${filename}_example_app 0)
    message(${CMAKE_BUILD_TYPE})
    string(TOLOWER ${CMAKE_BUILD_TYPE} build_type)
    if (build_type STREQUAL debug)
        pico_enable_stdio_usb(${filename}_example_app 1)
        target_link_libraries(${filename}_example_app PRIVATE pico_stdio_usb)
    else()
        pico_enable_stdio_usb(${filename}_example_app 0)
    endif()
endfunction(add_simple_example)

add_simple_example(Divider)
add_simple_example(List)
add_simple_example(QRCode)
add_simple_example(Text)
